test/good/arrays/comprehension16.px

print [if 2 + 2 < 4 yield 'a']
print [if true for c in 'b'..'c' yield c]
