test/bad/arrays/comprehension12.px

[for a in [[]] yield ...a]
